# momentmarkt

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fly.toml  pnpm-lock.yaml  skills-lock.json
.github/workflows/: backend-tests.yml  (+1 more)
apps/backend/: README.md  pyproject.toml
apps/backend/src/momentmarkt_backend/: alternatives.py  fixtures.py  llm_agents.py  main.py  menu_edit_agent.py  menu_ocr.py  merchant_enrichment.py  merchants.py  negotiation_agent.py  onboarding.py  opportunity_agent.py  semantic_novelty.py  signals.py  storage.py  subhead_agent.py  surfacing_agent.py
apps/backend/src/momentmarkt_backend/scripts/: __init__.py  enrich_merchants.py  synthesize_signal_contexts.py
apps/backend/tests/: test_alternatives.py  test_alternatives_negotiation.py  test_api.py  test_api_stress.py  test_density_fixture.py  test_genui.py  test_headline_cache.py  test_history.py  test_menu_edit_agent.py  test_merchants_search.py  test_negotiation_agent.py  test_opportunity_agent.py  test_semantic_novelty.py  test_signals.py  test_surfacing.py
assets/: COVER_RENDER.md  LOGO_RENDER.md  MD_AUDIT.md  architecture-diagrams.md  architecture-slide.md  cover.html
cities/: berlin.json  zurich.json
context/: AGENT_IO.md  CHALLENGE_BRIEF.md  DESIGN_PRINCIPLES.md  END_GOAL_ARCHITECTURE.md  FUTURE.md  HACKATHON.md  IDEA_SEED.md  PARTNER_DISCUSSION.md  THOUGHTS.md  USER_FLOW_AND_MERCHANT_DASHBOARD.md
planning/: ARTIFACTS.md  ORCHESTRATOR.md
work/: BUDGET.md  EXPLORATION_QUEUE.md  SPEC.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md
(+108 files in other folders)
