[project]
name = "momentmarkt-backend"
version = "0.1.0"
description = "FastAPI fixture and Opportunity Agent service for the MomentMarkt demo."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "logfire[fastapi]>=3.0.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
llm = [
  "pydantic-ai>=1.0.0",
]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
